--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="titulo">DEVISOVICH <span>formación</span></h1>
@@ -26,7 +27,7 @@
     <section class="hero">
         <div class="contenido-hero">
             <h2>formación onnline a tu ritmo</h2>
-            <p>aprende desde casa</p>
+            <p>aprende desde casa comodamente.</p>
             <a class="boton" href="tutoriales.html">Tutoriales</a>
         </div>
     </section>
