pagina web actualizacion

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <section class="hero">
         <div class="contenido-hero">
-            <h2>formación onnline a tu ritmo</h2>
+            <h2>formación onnline a tu ritmo y fácil</h2>
             <p>aprende desde casa comodamente.</p>
             <a class="boton" href="tutoriales.html">Tutoriales</a>
         </div>
