--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos a DEVISOVICH</title>
+    <title>Bienvenidos a tu amdre en bolas</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -100,7 +100,7 @@
                     <div class="campo">
                         <div>
                             <label for="">Mensaje</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea  >
+                            <textarea name="" id="" cols="112" rows="10"></textarea  >
                             <div>
                         <div>
                         <div>
