--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenidos a tu amdre en bolas</title>
+    <title>Bienvenidos a DEVISOVICH</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="titulo">DEVISOVICH <span>formación</span></h1>
+        <h1 class="titulo">me caogo en tus muertos <span>formación</span></h1>
     </header>
     <div class="bg-secundario">
         <nav class="navegacion-principal contenedor">
