--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 class="titulo">me caogo en tus muertos <span>formación</span></h1>
+        <h1 class="titulo">DEVISOVICH <span>formación</span></h1>
     </header>
     <div class="bg-secundario">
         <nav class="navegacion-principal contenedor">
